src/component/Header/Header.module.css
:root {
    --primary-color : #FFFFFF;
    --secondary-color : #323848;
    --third-color : #336EF9;
    --forth-color : #FFB302;
    --text-color : #020626;
    --bg-color : #F5F7FA;
    --secondary-bg-color : #f0f3f9; 
}

.header{
    background-color: var(--primary-color);
    color: var(--bg-color);
    z-index: 9999;
    position: sticky;
    top: 0;
}

.header_content{
    display: flex;
    flex-direction: row;
    max-width: 1200px;
    align-items: center;
    justify-content:space-between;
}

.navigation_list{
    display: flex;
    align-items: center;
    justify-content: space-around;
    margin-inline: auto;
    gap: 5rem;
    
}

.navigation_list li{
    list-style-type: none;
    
}

.navigation_list li a{
    text-decoration: none;
    padding: 0rem 0rem;
    transition: all 0.2s ease-in-out;
    color: var(--text-color);
}

.navigation_list li a:hover{
    text-decoration: underline;
    text-decoration-color: var(--forth-color);
    border-bottom: var(--forth-color);
    color:  var(--third-color);
}

.title{
    margin-left: 5rem;
    padding: 1rem;
    background-color: var(--third-color);
    color: var(--primary-color);
    border-radius: 5px;
}

.title u{
    text-decoration-color: var(--forth-color);
}
.nav_button{
    display: none;
}

@media screen and (max-width: 768px){
    .title{
      margin-left: 0.5rem;
      padding: 1rem;
      background-color: var(--third-color);
      color: var(--primary-color);
      border-radius: 5px;
      white-space: nowrap;
      font-size: 1.5rem;
    }
    .navigation_list{
        display: none;
    }
    .navigation_open {
        right: 0;
        top: 0;
        display: block;
        position: fixed;
        background-color: var(--primary-color);
        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
        padding-left: 0.5rem;
    }
    .navigation_open {
        padding-right: 0;
        margin-right: 0;
    }

    .navigation_list_open{
        display: flex;
        flex-direction: column;
        padding-right: 0.5rem;
    }
    .top,.mid,.bottom{
        width: 1.5rem;
        margin: 0;
    }
    .top{
        margin-top: 0.5rem;
    }
    .mid{
        margin-top: 0.3rem;
        margin-bottom: 0.3rem;
    }
    .bottom{
        margin-bottom: 0.5rem;
    }
    .nav_button{
        display: flex;
        flex-direction: column;
        padding-left: 0.3rem;
        padding-right: 0.3rem;
        margin-right: 0.5rem; 
        margin-top: 1rem;
        margin-bottom: 1rem;
        border-radius: 5px;
        background-color: var(--third-color);
        max-width: fit-content;
    }
    .navigation_list_open li a{
        text-decoration: none;
        padding: 0rem 0rem;
        transition: all 0.2s ease-in-out;
        color: var(--text-color);
    }
    .navigation_list_open{
        display: flex;
        align-items: center;
        justify-content: space-around;
        margin-inline: auto;
        gap: 5rem;
        
    }
    
    .navigation_list_open li{
        list-style-type: none;
        
    }
    
}

